feat: pantalla contactos empty state

--- a/index.html
+++ b/index.html
@@ -31,15 +31,23 @@
         <div class="ps-3">
           <h3 class="h5">Flujo Instalación</h3>
           <ul>
-            <li><a href="./views/install/1-install.html">Página de Instalación</a></li>
+            <li>
+              <a href="./views/install/1-install.html">Página de Instalación</a>
+            </li>
             <li><a href="./views/install/2-loading.html">Loading</a></li>
-            <li><a href="./views/install/3-install-success.html">Instalación exitosa</a></li>
+            <li>
+              <a href="./views/install/3-install-success.html"
+                >Instalación exitosa</a
+              >
+            </li>
           </ul>
         </div>
         <div class="ps-3">
           <h3 class="h5">Flujo Configuración general</h3>
           <ul>
-            <li><a href="./views/config/1-default.html">Configuración general</a></li>
+            <li>
+              <a href="./views/config/1-default.html">Configuración general</a>
+            </li>
           </ul>
         </div>
         <div class="mb-5 ps-3">
@@ -47,9 +55,27 @@
           <ul>
             <li><a href="./views/sections/1-commands.html">Comandos</a></li>
             <li><a href="./views/sections/2-help.html">Ayuda</a></li>
-            <li><a href="./views/sections/3-help-activate.html">Ayuda - Activar transcripciones</a></li>
-            <li><a href="./views/sections/4-config-pause.html">Configuracion - transcripciones pausadas</a></li>
-            <li><a href="./views/sections/5-config-pause-alert.html">Configuracion - activar transcripciones</a></li>
+            <li>
+              <a href="./views/sections/3-help-activate.html"
+                >Ayuda - Activar transcripciones</a
+              >
+            </li>
+            <li>
+              <a href="./views/sections/4-config-pause.html"
+                >Configuracion - transcripciones pausadas</a
+              >
+            </li>
+            <li>
+              <a href="./views/sections/5-config-pause-alert.html"
+                >Configuracion - activar transcripciones</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="mb-5 ps-3">
+          <h3 class="h5">Flujo Configuración contactos</h3>
+          <ul>
+            <li><a href="./views/contacts/1-empty.html">Empty state</a></li>
           </ul>
         </div>
 
