config contactos add

--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
           <ul>
             <li><a href="./views/contacts/1-empty.html">Empty state</a></li>
           </ul>
+          <ul>
+            <li><a href="./views/contacts/2-add.html">Add</a></li>
+          </ul>
         </div>
 
         <h2 class="d-flex align-items-center gap-1 h4 mt-4">
