fixes en contacto y se agrega contacto error

--- a/index.html
+++ b/index.html
@@ -76,10 +76,8 @@
           <h3 class="h5">Flujo Configuración contactos</h3>
           <ul>
             <li><a href="./views/contacts/1-empty.html">Empty state</a></li>
-          </ul>
-          <ul>
             <li><a href="./views/contacts/2-add.html">Add</a></li>
-          </ul>
+            <li><a href="./views/contacts/3-error.html">Error</a></li>
         </div>
 
         <h2 class="d-flex align-items-center gap-1 h4 mt-4">
