--- a/index.html
+++ b/index.html
@@ -87,44 +87,15 @@
         <section class="mt-5">
           <h2>Botones</h2>
           <button type="button" class="btn btn-primary">Primary</button>
-          <button type="button" class="btn btn-secondary">Secondary</button>
-          <button type="button" class="btn btn-success">Success</button>
+          <button type="button" class="btn btn-outline-secondary">Secondary</button>
           <button type="button" class="btn btn-danger">Danger</button>
-          <button type="button" class="btn btn-warning">Warning</button>
-          <button type="button" class="btn btn-info">Info</button>
-          <button type="button" class="btn btn-light">Light</button>
-          <button type="button" class="btn btn-dark">Dark</button>
-          <button type="button" class="btn btn-link">Link</button>
+          <button type="button" class="btn btn-outline-danger">Danger</button>
 
           <div class="mt-4">
             <h3>Tamaños</h3>
-            <button type="button" class="btn btn-primary btn-sm">
-              Primary sm
-            </button>
-            <button type="button" class="btn btn-primary">Primary</button>
             <button type="button" class="btn btn-primary btn-lg">
-              Primary lg
+              Botón lg
             </button>
-          </div>
-          <div class="mt-4">
-            <h3>Con borde</h3>
-            <button type="button" class="btn btn-outline-primary">
-              Primary
-            </button>
-            <button type="button" class="btn btn-outline-secondary">
-              Secondary
-            </button>
-            <button type="button" class="btn btn-outline-success">
-              Success
-            </button>
-            <button type="button" class="btn btn-outline-danger">Danger</button>
-            <button type="button" class="btn btn-outline-warning">
-              Warning
-            </button>
-            <button type="button" class="btn btn-outline-info">Info</button>
-            <button type="button" class="btn btn-outline-light">Light</button>
-            <button type="button" class="btn btn-outline-dark">Dark</button>
-            <button type="button" class="btn btn-outline-link">Link</button>
           </div>
         </section>
       </article>
