fix: configuracion general, se agregan toast de exito y error (se comenta), se ajustan estilos

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <h3 class="h5">Flujo Configuración general</h3>
           <ul>
             <li>
-              <a href="./views/config/1-default.html">Configuración general</a>
+              <a href="./views/config/config-general.html">Pantalla <strong>Configuración general</strong> con <strong>Toast de éxito</strong> y <strong>Toast de error (comentado)</strong> </a>
             </li>
           </ul>
         </div>
