fix: ajuste en modal en ayuda, se combinan las pantallas de ayuda y queda el codigo del boton comentado

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <article class="container mt-5">
         <h1 class="h3">Ozer</h1>
         <h2 class="h4">Pantallas</h2>
-        <div class="ps-3">
+        <div class="mb-5 ps-3">
           <h3 class="h5">Flujo Instalación</h3>
           <ul>
             <li>
@@ -42,7 +42,7 @@
             </li>
           </ul>
         </div>
-        <div class="ps-3">
+        <div class="mb-5 ps-3">
           <h3 class="h5">Flujo Configuración general</h3>
           <ul>
             <li>
@@ -53,8 +53,8 @@
         <div class="mb-5 ps-3">
           <h3 class="h5">Flujo Secciones del header</h3>
           <ul>
-            <li><a href="./views/sections/1-commands.html">Comandos</a></li>
-            <li><a href="./views/sections/2-help.html">Ayuda</a></li>
+            <li><a href="./views/sections/1-commands.html">Pantalla <strong>Comandos</strong> </a></li>
+            <li><a href="./views/sections/2-help.html">Pantalla <strong>Ayuda</strong> con componente Modal para <strong>Pausar las transcripciones</strong> y <strong> Texto y Botón para activar las transcripciones</strong> (comentados)</a></li>
             <li>
               <a href="./views/sections/3-help-activate.html"
                 >Ayuda - Activar transcripciones</a
