fix: ajustes en toast, se configura pantalla para mostrar alerta y toast de activar transcripciones

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         <div class="mb-5 ps-3">
           <h3 class="h5">Flujo Instalación</h3>
           <ul>
-            <li>
+            <li class="mb-2">
               <a href="./views/install/1-install.html">Página de Instalación</a>
             </li>
-            <li><a href="./views/install/2-loading.html">Loading</a></li>
-            <li>
+            <li class="mb-2"><a href="./views/install/2-loading.html">Loading</a></li>
+            <li class="mb-2">
               <a href="./views/install/3-install-success.html"
                 >Instalación exitosa</a
               >
@@ -45,7 +45,7 @@
         <div class="mb-5 ps-3">
           <h3 class="h5">Flujo Configuración general</h3>
           <ul>
-            <li>
+            <li class="mb-2">
               <a href="./views/config/config-general.html">Pantalla <strong>Configuración general</strong> con <strong>Toast de éxito</strong> y <strong>Toast de error (comentado)</strong> </a>
             </li>
           </ul>
@@ -53,16 +53,11 @@
         <div class="mb-5 ps-3">
           <h3 class="h5">Flujo Secciones del header</h3>
           <ul>
-            <li><a href="./views/sections/1-commands.html">Pantalla <strong>Comandos</strong> </a></li>
-            <li><a href="./views/sections/2-help.html">Pantalla <strong>Ayuda</strong> con componente Modal para <strong>Pausar las transcripciones</strong> y <strong> Texto y Botón para activar las transcripciones</strong> (comentados)</a></li>
-            <li>
-              <a href="./views/sections/4-config-pause.html"
-                >Configuracion - transcripciones pausadas</a
-              >
-            </li>
-            <li>
-              <a href="./views/sections/5-config-pause-alert.html"
-                >Configuracion - activar transcripciones</a
+            <li class="mb-2"><a href="./views/sections/1-commands.html">Pantalla <strong>Comandos</strong> </a></li>
+            <li class="mb-2"><a href="./views/sections/2-help.html">Pantalla <strong>Ayuda</strong> con componente Modal para <strong>Pausar las transcripciones</strong> y <strong> Texto y Botón para activar las transcripciones</strong> (comentados)</a></li>
+            <li class="mb-2">
+              <a href="./views/sections/3-config-alert.html"
+                >Pantalla <strong>Configuración general</strong> con <strong>transcripciones pausadas</strong>: componente <strong>alerta</strong> y componente <strong>toast</strong> de transcripciones activadas</a
               >
             </li>
           </ul>
@@ -70,9 +65,9 @@
         <div class="mb-5 ps-3">
           <h3 class="h5">Flujo Configuración contactos</h3>
           <ul>
-            <li><a href="./views/contacts/1-empty.html">Empty state</a></li>
-            <li><a href="./views/contacts/2-add.html">Add</a></li>
-            <li><a href="./views/contacts/3-error.html">Error</a></li>
+            <li class="mb-2"><a href="./views/contacts/1-empty.html">Empty state</a></li>
+            <li class="mb-2"><a href="./views/contacts/2-add.html">Add</a></li>
+            <li class="mb-2"><a href="./views/contacts/3-error.html">Error</a></li>
         </div>
 
         <h2 class="d-flex align-items-center gap-1 h4 mt-4">
