fix: validacion de form en contacto, tootlip, ajuste en tabla

--- a/index.html
+++ b/index.html
@@ -65,9 +65,8 @@
         <div class="mb-5 ps-3">
           <h3 class="h5">Flujo Configuración contactos</h3>
           <ul>
-            <li class="mb-2"><a href="./views/contacts/1-empty.html">Empty state</a></li>
-            <li class="mb-2"><a href="./views/contacts/2-add.html">Add</a></li>
-            <li class="mb-2"><a href="./views/contacts/3-error.html">Error</a></li>
+            <li class="mb-2"><a href="./views/contacts/1-contact.html">Pantalla <strong>Agregar contacto</strong> Empty state y validación de formulario</a></li>
+            <li class="mb-2"><a href="./views/contacts/2-contact-added.html">Pantalla <strong>Contacto agregado</strong></a></li>            
         </div>
 
         <h2 class="d-flex align-items-center gap-1 h4 mt-4">
