fix: edit contact

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
           <ul>
             <li class="mb-2"><a href="./views/contacts/1-contact.html">Pantalla <strong>Agregar contacto</strong> Empty state y validación de formulario</a></li>
             <li class="mb-2"><a href="./views/contacts/2-contact-added.html">Pantalla <strong>Contacto agregado</strong></a></li>            
+            <li class="mb-2"><a href="./views/contacts/3-contact-edit.html">Pantalla <strong>Editar contacto</strong></a></li>            
         </div>
 
         <h2 class="d-flex align-items-center gap-1 h4 mt-4">
