fix: ajustes en contacto y grupos, se agrega waitlist

--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
             <li class="mb-2"><a href="./views/groups/2-groups-actions.html">Pantalla <strong>Grupo agregado</strong> con acciones Editar y Eliminar grupo.</a></li>           
         </div>
 
+        <div class="mb-5 ps-3">
+          <h3 class="h5">Flujo Waitlist</h3>
+          <ul>
+            <li class="mb-2"><a href="./views/waitlist/1-waitlist.html">Pantalla <strong>Waitlist</strong></a></li>          
+        </div>
+
         <h2 class="d-flex align-items-center gap-1 h4 mt-4">
           <span class="material-symbols-outlined">view_comfy_alt</span>
           <span>Componentes</span>
