pantallas de instalacion

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
           <h3 class="h5">Flujo Instalación</h3>
           <ul>
             <li class="mb-2">
-              <a href="./views/install/1-install.html">Página de Instalación</a>
+              <a href="./views/install/1-install-qr.html">Página de Instalación QR</a>
+            </li>
+            <li class="mb-2">
+              <a href="./views/install/1-install-codigo.html">Página de Instalación Código</a>
             </li>
             <li class="mb-2"><a href="./views/install/2-loading.html">Loading</a></li>
             <li class="mb-2">
