acceso a archivos desde pagina principal

--- a/index.html
+++ b/index.html
@@ -29,6 +29,20 @@
         <h1 class="h3">Ozer</h1>
         <h2 class="h4">Pantallas</h2>
         <div class="mb-5 ps-3">
+          <h3 class="h5">Landing - Privacidad - Términos y condiciones</h3>
+          <ul>
+            <li class="mb-2">
+              <a href="./views/landing/landing.html">Landing page</a>
+            </li>
+            <li class="mb-2">
+              <a href="./views/landing/privacy.html">Privacidad</a>
+            </li>
+            <li class="mb-2">
+              <a href="./views/landing/terms.html">Términos y condiciones</a>
+            </li>
+          </ul>
+        </div>
+        <div class="mb-5 ps-3">
           <h3 class="h5">Flujo Instalación</h3>
           <ul>
             <li class="mb-2">
